분석 데이터 통합

--- a/bicycle_analysis.ipynb
+++ b/bicycle_analysis.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_df.columns = ['자치구명', '대여건수', '반납건수']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +225,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>자치구</th>\n",
+       "      <th>자치구명</th>\n",
        "      <th>대여건수</th>\n",
        "      <th>반납건수</th>\n",
        "    </tr>\n",
@@ -252,166 +261,26 @@
        "      <td>540994</td>\n",
        "      <td>529883.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>광진구</td>\n",
-       "      <td>1053185</td>\n",
-       "      <td>1032267.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>구로구</td>\n",
-       "      <td>860924</td>\n",
-       "      <td>854159.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>금천구</td>\n",
-       "      <td>375621</td>\n",
-       "      <td>370767.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>노원구</td>\n",
-       "      <td>1306650</td>\n",
-       "      <td>1294840.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>도봉구</td>\n",
-       "      <td>450941</td>\n",
-       "      <td>451872.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>동대문구</td>\n",
-       "      <td>771309</td>\n",
-       "      <td>783989.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>동작구</td>\n",
-       "      <td>446626</td>\n",
-       "      <td>446828.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>마포구</td>\n",
-       "      <td>1077748</td>\n",
-       "      <td>1078012.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>서대문구</td>\n",
-       "      <td>435048</td>\n",
-       "      <td>412412.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>서초구</td>\n",
-       "      <td>646206</td>\n",
-       "      <td>634898.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>성동구</td>\n",
-       "      <td>864387</td>\n",
-       "      <td>855251.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>성북구</td>\n",
-       "      <td>529545</td>\n",
-       "      <td>528594.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>송파구</td>\n",
-       "      <td>2019359</td>\n",
-       "      <td>2001083.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>양천구</td>\n",
-       "      <td>1221741</td>\n",
-       "      <td>1220666.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>영등포구</td>\n",
-       "      <td>1756829</td>\n",
-       "      <td>1717698.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>용산구</td>\n",
-       "      <td>445542</td>\n",
-       "      <td>438256.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>은평구</td>\n",
-       "      <td>540462</td>\n",
-       "      <td>546061.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>종로구</td>\n",
-       "      <td>745979</td>\n",
-       "      <td>707293.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>중구</td>\n",
-       "      <td>515286</td>\n",
-       "      <td>485318.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>중랑구</td>\n",
-       "      <td>624881</td>\n",
-       "      <td>631987.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     자치구     대여건수       반납건수\n",
-       "0    강남구   673634   633867.0\n",
-       "1    강동구   933894   939209.0\n",
-       "2    강북구   335276   328670.0\n",
-       "3    강서구  2425742  2408730.0\n",
-       "4    관악구   540994   529883.0\n",
-       "5    광진구  1053185  1032267.0\n",
-       "6    구로구   860924   854159.0\n",
-       "7    금천구   375621   370767.0\n",
-       "8    노원구  1306650  1294840.0\n",
-       "9    도봉구   450941   451872.0\n",
-       "10  동대문구   771309   783989.0\n",
-       "11   동작구   446626   446828.0\n",
-       "12   마포구  1077748  1078012.0\n",
-       "13  서대문구   435048   412412.0\n",
-       "14   서초구   646206   634898.0\n",
-       "15   성동구   864387   855251.0\n",
-       "16   성북구   529545   528594.0\n",
-       "17   송파구  2019359  2001083.0\n",
-       "18   양천구  1221741  1220666.0\n",
-       "19  영등포구  1756829  1717698.0\n",
-       "20   용산구   445542   438256.0\n",
-       "21   은평구   540462   546061.0\n",
-       "22   종로구   745979   707293.0\n",
-       "23    중구   515286   485318.0\n",
-       "24   중랑구   624881   631987.0"
+       "  자치구명     대여건수       반납건수\n",
+       "0  강남구   673634   633867.0\n",
+       "1  강동구   933894   939209.0\n",
+       "2  강북구   335276   328670.0\n",
+       "3  강서구  2425742  2408730.0\n",
+       "4  관악구   540994   529883.0"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result_df"
+    "result_df.head()"
    ]
   },
   {
@@ -463,268 +332,6 @@
     "plt.gca().yaxis.set_major_formatter(formatter)\n",
     "plt.savefig('./result/2023년 서울시 자치구별 공공자전거 대여건수.png')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "station_df = pd.read_csv('./data/공공자전거 대여소 정보(23.06월 기준).csv', encoding='cp949')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "unnamed_cols = ['Unnamed: 10', 'Unnamed: 11', 'Unnamed: 12', 'Unnamed: 13', 'Unnamed: 14', 'Unnamed: 15', 'Unnamed: 16', 'Unnamed: 17', 'Unnamed: 18', 'Unnamed: 19', 'Unnamed: 20']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "station_df.drop(unnamed_cols, axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>대여소\\n번호</th>\n",
-       "      <th>보관소(대여소)명</th>\n",
-       "      <th>소재지(위치)</th>\n",
-       "      <th>Unnamed: 3</th>\n",
-       "      <th>Unnamed: 4</th>\n",
-       "      <th>Unnamed: 5</th>\n",
-       "      <th>설치\\n시기</th>\n",
-       "      <th>설치형태</th>\n",
-       "      <th>Unnamed: 8</th>\n",
-       "      <th>운영\\n방식</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>LCD</td>\n",
-       "      <td>QR</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>자치구</td>\n",
-       "      <td>상세주소</td>\n",
-       "      <td>위도</td>\n",
-       "      <td>경도</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>거치\\n대수</td>\n",
-       "      <td>거치\\n대수</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>301.0</td>\n",
-       "      <td>경복궁역 7번출구 앞</td>\n",
-       "      <td>종로구</td>\n",
-       "      <td>서울특별시 종로구 사직로 지하130 경복궁역 7번출구 앞</td>\n",
-       "      <td>37.57579422</td>\n",
-       "      <td>126.9714508</td>\n",
-       "      <td>2015-10-07</td>\n",
-       "      <td>20</td>\n",
-       "      <td>20</td>\n",
-       "      <td>QR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2748</th>\n",
-       "      <td>3699.0</td>\n",
-       "      <td>상일파출소 옆</td>\n",
-       "      <td>강동구</td>\n",
-       "      <td>강동구 상일동 520-1</td>\n",
-       "      <td>37.55655289</td>\n",
-       "      <td>127.1658783</td>\n",
-       "      <td>2022-06-21</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>15</td>\n",
-       "      <td>QR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2749</th>\n",
-       "      <td>3700.0</td>\n",
-       "      <td>강변그대가리버뷰 입구 맞은편</td>\n",
-       "      <td>강동구</td>\n",
-       "      <td>강동구 천호동 250-7</td>\n",
-       "      <td>37.54816437</td>\n",
-       "      <td>127.1225739</td>\n",
-       "      <td>2022-07-08</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8</td>\n",
-       "      <td>QR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2750</th>\n",
-       "      <td>3701.0</td>\n",
-       "      <td>방아삼거리</td>\n",
-       "      <td>강동구</td>\n",
-       "      <td>강동구 둔촌동 118-2</td>\n",
-       "      <td>37.5232811</td>\n",
-       "      <td>127.1461334</td>\n",
-       "      <td>2022-10-12</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8</td>\n",
-       "      <td>QR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2751</th>\n",
-       "      <td>4951.0</td>\n",
-       "      <td>강동농협 버스정류소 앞(광채빌라)</td>\n",
-       "      <td>강동구</td>\n",
-       "      <td>강동구 암사동 488-21</td>\n",
-       "      <td>37.547966</td>\n",
-       "      <td>127.1351624</td>\n",
-       "      <td>2022-09-29</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5</td>\n",
-       "      <td>QR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2752</th>\n",
-       "      <td>4952.0</td>\n",
-       "      <td>천호시장 버스정류소 옆</td>\n",
-       "      <td>강동구</td>\n",
-       "      <td>강동구 천호동 397-465</td>\n",
-       "      <td>37.54146576</td>\n",
-       "      <td>127.1302567</td>\n",
-       "      <td>2023-01-18</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5</td>\n",
-       "      <td>QR</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2753 rows × 10 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      대여소\\n번호            보관소(대여소)명 소재지(위치)                       Unnamed: 3  \\\n",
-       "0         NaN                  NaN     NaN                              NaN   \n",
-       "1         NaN                  NaN     자치구                             상세주소   \n",
-       "2         NaN                  NaN     NaN                              NaN   \n",
-       "3         NaN                  NaN     NaN                              NaN   \n",
-       "4       301.0          경복궁역 7번출구 앞     종로구  서울특별시 종로구 사직로 지하130 경복궁역 7번출구 앞   \n",
-       "...       ...                  ...     ...                              ...   \n",
-       "2748   3699.0              상일파출소 옆     강동구                    강동구 상일동 520-1   \n",
-       "2749   3700.0      강변그대가리버뷰 입구 맞은편     강동구                    강동구 천호동 250-7   \n",
-       "2750   3701.0                방아삼거리     강동구                    강동구 둔촌동 118-2   \n",
-       "2751   4951.0   강동농협 버스정류소 앞(광채빌라)     강동구                   강동구 암사동 488-21   \n",
-       "2752   4952.0         천호시장 버스정류소 옆     강동구                  강동구 천호동 397-465   \n",
-       "\n",
-       "       Unnamed: 4   Unnamed: 5      설치\\n시기    설치형태 Unnamed: 8 운영\\n방식  \n",
-       "0             NaN          NaN         NaN     LCD         QR    NaN  \n",
-       "1              위도           경도         NaN     NaN        NaN    NaN  \n",
-       "2             NaN          NaN         NaN  거치\\n대수     거치\\n대수    NaN  \n",
-       "3             NaN          NaN         NaN     NaN        NaN    NaN  \n",
-       "4     37.57579422  126.9714508  2015-10-07      20         20     QR  \n",
-       "...           ...          ...         ...     ...        ...    ...  \n",
-       "2748  37.55655289  127.1658783  2022-06-21     NaN         15     QR  \n",
-       "2749  37.54816437  127.1225739  2022-07-08     NaN          8     QR  \n",
-       "2750   37.5232811  127.1461334  2022-10-12     NaN          8     QR  \n",
-       "2751    37.547966  127.1351624  2022-09-29     NaN          5     QR  \n",
-       "2752  37.54146576  127.1302567  2023-01-18     NaN          5     QR  \n",
-       "\n",
-       "[2753 rows x 10 columns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "station_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "station_df_sorted = station_df.groupby('소재지(위치)')"
    ]
   }
  ],
