--- a/electricity_consumption_analysis.ipynb
+++ b/electricity_consumption_analysis.ipynb
@@ -285,7 +285,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_columns_filtered.columns = ['자치구명', '전력사용량']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -309,8 +318,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>자치구별(2)</th>\n",
-       "      <th>2022</th>\n",
+       "      <th>자치구명</th>\n",
+       "      <th>전력사용량</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -339,146 +348,26 @@
        "      <td>광진구</td>\n",
        "      <td>1616001</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>동대문구</td>\n",
-       "      <td>1457689</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>중랑구</td>\n",
-       "      <td>1161372</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>성북구</td>\n",
-       "      <td>1497475</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>강북구</td>\n",
-       "      <td>933057</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>도봉구</td>\n",
-       "      <td>894641</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>노원구</td>\n",
-       "      <td>1540077</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>은평구</td>\n",
-       "      <td>1505392</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>서대문구</td>\n",
-       "      <td>1297535</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>마포구</td>\n",
-       "      <td>2265953</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>양천구</td>\n",
-       "      <td>1797687</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>강서구</td>\n",
-       "      <td>2752727</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>구로구</td>\n",
-       "      <td>1927165</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>금천구</td>\n",
-       "      <td>1691616</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>영등포구</td>\n",
-       "      <td>2782101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>동작구</td>\n",
-       "      <td>1298388</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>관악구</td>\n",
-       "      <td>1735924</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>서초구</td>\n",
-       "      <td>3291898</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>강남구</td>\n",
-       "      <td>4822166</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>송파구</td>\n",
-       "      <td>3084332</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>강동구</td>\n",
-       "      <td>1659003</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   자치구별(2)     2022\n",
-       "4      종로구  1721240\n",
-       "5       중구  2305200\n",
-       "6      용산구  1514990\n",
-       "7      성동구  2235050\n",
-       "8      광진구  1616001\n",
-       "9     동대문구  1457689\n",
-       "10     중랑구  1161372\n",
-       "11     성북구  1497475\n",
-       "12     강북구   933057\n",
-       "13     도봉구   894641\n",
-       "14     노원구  1540077\n",
-       "15     은평구  1505392\n",
-       "16    서대문구  1297535\n",
-       "17     마포구  2265953\n",
-       "18     양천구  1797687\n",
-       "19     강서구  2752727\n",
-       "20     구로구  1927165\n",
-       "21     금천구  1691616\n",
-       "22    영등포구  2782101\n",
-       "23     동작구  1298388\n",
-       "24     관악구  1735924\n",
-       "25     서초구  3291898\n",
-       "26     강남구  4822166\n",
-       "27     송파구  3084332\n",
-       "28     강동구  1659003"
+       "  자치구명    전력사용량\n",
+       "4  종로구  1721240\n",
+       "5   중구  2305200\n",
+       "6  용산구  1514990\n",
+       "7  성동구  2235050\n",
+       "8  광진구  1616001"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "selected_columns_filtered"
+    "selected_columns_filtered.head()"
    ]
   },
   {
