녹지현황 공원현황으로 변경

--- a/park_area.ipynb
+++ b/park_area.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,35 +29,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/qr/d0tz05096cq7wtbf54br3qsw0000gn/T/ipykernel_32401/1430340065.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/qr/d0tz05096cq7wtbf54br3qsw0000gn/T/ipykernel_32401/786680225.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  park.drop(index=range(5), inplace=True)\n",
-      "/var/folders/qr/d0tz05096cq7wtbf54br3qsw0000gn/T/ipykernel_32401/1430340065.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/qr/d0tz05096cq7wtbf54br3qsw0000gn/T/ipykernel_32401/786680225.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  park.drop(index=30, inplace=True)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5     11434.6\n",
+       "6      3206.2\n",
+       "7      1774.0\n",
+       "8      3083.8\n",
+       "9      3459.8\n",
+       "10     1215.4\n",
+       "11     5229.0\n",
+       "12     8526.7\n",
+       "13    14495.4\n",
+       "14    10151.0\n",
+       "15    14741.6\n",
+       "16    14400.1\n",
+       "17     5106.2\n",
+       "18     4569.4\n",
+       "19     3049.6\n",
+       "20     4518.3\n",
+       "21     3712.7\n",
+       "22     2774.4\n",
+       "23     3003.0\n",
+       "24     4368.2\n",
+       "25    12485.2\n",
+       "26    15072.0\n",
+       "27     7794.1\n",
+       "28     4776.8\n",
+       "29     3406.5\n",
+       "Name: 공원면적, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "park.drop(index=range(5), inplace=True)\n",
     "park.drop(index=30, inplace=True)\n",
-    "park.columns = ['자치구명', '공원면적']"
+    "park.columns = ['자치구명', '공원면적']\n",
+    "park['공원면적'].astype('float')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +280,7 @@
        "29   강동구   3406.5"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
