최종 데이터 csv 파일로 저장

--- a/environmental_index_analysis.ipynb
+++ b/environmental_index_analysis.ipynb
@@ -800,6 +800,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env_index.to_csv('./result/seoul_env_index.csv', encoding='utf-8-sig')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
