csv 저장 시 index 저장하지 않도록 변경

--- a/environmental_index_analysis.ipynb
+++ b/environmental_index_analysis.ipynb
@@ -800,11 +800,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_index.to_csv('./result/seoul_env_index.csv', encoding='utf-8-sig')"
+    "env_index.to_csv('./result/seoul_env_index.csv', encoding='utf-8-sig', index=False)"
    ]
   },
   {
