csv 파일명 변경

--- a/environmental_index_analysis.ipynb
+++ b/environmental_index_analysis.ipynb
@@ -774,11 +774,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_index.to_csv('./result/seoul_env_index.csv', encoding='utf-8-sig', index=False)"
+    "env_index.to_csv('./result/seoul_env_data.csv', encoding='utf-8-sig', index=False)"
    ]
   },
   {
