평가지표 중 일산화탄소 제거

--- a/draw_index.ipynb
+++ b/draw_index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,28 +94,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
-    "normalized_df['녹색도시지수'] = (normalized_df['온실가스(1인당)'] + normalized_df['전력사용량'] + normalized_df['급수사용량(1인당)'] + normalized_df['쓰레기배출량(1인당)'] + normalized_df['아황산가스'] + normalized_df['이산화질소'] + normalized_df['미세먼지'] + normalized_df['오존']) * -1/5 \\\n",
+    "normalized_df['환경생태지수'] = (normalized_df['온실가스(1인당)'] + normalized_df['전력사용량'] + normalized_df['급수사용량(1인당)'] + normalized_df['쓰레기배출량(1인당)'] + normalized_df['아황산가스'] + normalized_df['이산화질소'] + normalized_df['미세먼지'] + normalized_df['오존']) * -1/5 \\\n",
     "    + (normalized_df['공공자전거_이용건수'] + normalized_df['공원면적(1인당)'])*2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Index(['자치구명', '온실가스(1인당)', '전력사용량', '공공자전거_이용건수', '급수사용량(1인당)', '쓰레기배출량(1인당)',\n",
-       "       '아황산가스', '일산화탄소', '이산화질소', '미세먼지', '오존', '공원면적(1인당)', '녹색도시지수'],\n",
+       "       '아황산가스', '이산화질소', '미세먼지', '오존', '공원면적(1인당)', '환경생태지수'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,18 +126,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
     "normalized_df.drop(columns=['온실가스(1인당)', '전력사용량', '공공자전거_이용건수', '급수사용량(1인당)', '쓰레기배출량(1인당)',\n",
-    "       '아황산가스', '일산화탄소', '이산화질소', '미세먼지', '오존', '공원면적(1인당)'], inplace=True)\n",
+    "       '아황산가스', '이산화질소', '미세먼지', '오존', '공원면적(1인당)'], inplace=True)\n",
     "normalized_df.to_csv('./result/seoul_env_index.csv', encoding='utf-8-sig', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>자치구명</th>\n",
-       "      <th>녹색도시지수</th>\n",
+       "      <th>환경생태지수</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -296,7 +296,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    자치구명    녹색도시지수\n",
+       "    자치구명    환경생태지수\n",
        "0    종로구  7.622158\n",
        "1     중구  1.334174\n",
        "2    용산구  0.209415\n",
@@ -324,7 +324,7 @@
        "24   강동구  1.553057"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
