--- a/environmental_index_analysis.ipynb
+++ b/environmental_index_analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,12 +219,12 @@
     "air_data = df[['구분별(1)']].join(df.filter(like='2022', axis=1))\n",
     "air_data.drop(index=range(1,4), inplace=True)\n",
     "air_data.columns = ['자치구명', '아황산가스', '일산화탄소', '이산화질소', '미세먼지', '초미세먼지', '오존']\n",
-    "air_data.drop(index=0, columns=['초미세먼지'], inplace=True)"
+    "air_data.drop(index=0, columns=['일산화탄소', '초미세먼지'], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,6 @@
        "      <th>급수사용량(1인당)</th>\n",
        "      <th>쓰레기배출량(1인당)</th>\n",
        "      <th>아황산가스</th>\n",
-       "      <th>일산화탄소</th>\n",
        "      <th>이산화질소</th>\n",
        "      <th>미세먼지</th>\n",
        "      <th>오존</th>\n",
@@ -337,7 +336,6 @@
        "      <td>0.165591</td>\n",
        "      <td>1.49</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.021</td>\n",
        "      <td>32</td>\n",
        "      <td>0.031</td>\n",
@@ -352,7 +350,6 @@
        "      <td>0.206970</td>\n",
        "      <td>2.26</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.4</td>\n",
        "      <td>0.024</td>\n",
        "      <td>30</td>\n",
        "      <td>0.030</td>\n",
@@ -367,7 +364,6 @@
        "      <td>0.115397</td>\n",
        "      <td>1.24</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.4</td>\n",
        "      <td>0.021</td>\n",
        "      <td>33</td>\n",
        "      <td>0.030</td>\n",
@@ -382,7 +378,6 @@
        "      <td>0.107414</td>\n",
        "      <td>0.93</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.4</td>\n",
        "      <td>0.021</td>\n",
        "      <td>35</td>\n",
        "      <td>0.028</td>\n",
@@ -397,7 +392,6 @@
        "      <td>0.101943</td>\n",
        "      <td>0.71</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.019</td>\n",
        "      <td>31</td>\n",
        "      <td>0.027</td>\n",
@@ -412,7 +406,6 @@
        "      <td>0.100464</td>\n",
        "      <td>0.91</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.4</td>\n",
        "      <td>0.022</td>\n",
        "      <td>34</td>\n",
        "      <td>0.032</td>\n",
@@ -427,7 +420,6 @@
        "      <td>0.164648</td>\n",
        "      <td>0.74</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.4</td>\n",
        "      <td>0.021</td>\n",
        "      <td>33</td>\n",
        "      <td>0.031</td>\n",
@@ -442,7 +434,6 @@
        "      <td>0.093245</td>\n",
        "      <td>0.85</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.023</td>\n",
        "      <td>33</td>\n",
        "      <td>0.028</td>\n",
@@ -457,7 +448,6 @@
        "      <td>0.090655</td>\n",
        "      <td>0.85</td>\n",
        "      <td>0.002</td>\n",
-       "      <td>0.4</td>\n",
        "      <td>0.015</td>\n",
        "      <td>34</td>\n",
        "      <td>0.032</td>\n",
@@ -472,7 +462,6 @@
        "      <td>0.089319</td>\n",
        "      <td>0.79</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.016</td>\n",
        "      <td>30</td>\n",
        "      <td>0.031</td>\n",
@@ -487,7 +476,6 @@
        "      <td>0.092882</td>\n",
        "      <td>0.72</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.021</td>\n",
        "      <td>34</td>\n",
        "      <td>0.030</td>\n",
@@ -502,7 +490,6 @@
        "      <td>0.090146</td>\n",
        "      <td>0.79</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.017</td>\n",
        "      <td>32</td>\n",
        "      <td>0.030</td>\n",
@@ -517,7 +504,6 @@
        "      <td>0.101740</td>\n",
        "      <td>0.84</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.6</td>\n",
        "      <td>0.018</td>\n",
        "      <td>31</td>\n",
        "      <td>0.029</td>\n",
@@ -532,7 +518,6 @@
        "      <td>0.111707</td>\n",
        "      <td>1.44</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.4</td>\n",
        "      <td>0.023</td>\n",
        "      <td>30</td>\n",
        "      <td>0.029</td>\n",
@@ -547,7 +532,6 @@
        "      <td>0.090671</td>\n",
        "      <td>0.78</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.021</td>\n",
        "      <td>34</td>\n",
        "      <td>0.027</td>\n",
@@ -562,7 +546,6 @@
        "      <td>0.098108</td>\n",
        "      <td>3.55</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.022</td>\n",
        "      <td>37</td>\n",
        "      <td>0.030</td>\n",
@@ -577,7 +560,6 @@
        "      <td>0.103314</td>\n",
        "      <td>0.89</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.4</td>\n",
        "      <td>0.019</td>\n",
        "      <td>35</td>\n",
        "      <td>0.030</td>\n",
@@ -592,7 +574,6 @@
        "      <td>0.110012</td>\n",
        "      <td>1.10</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.4</td>\n",
        "      <td>0.022</td>\n",
        "      <td>31</td>\n",
        "      <td>0.029</td>\n",
@@ -607,7 +588,6 @@
        "      <td>0.120993</td>\n",
        "      <td>1.10</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.023</td>\n",
        "      <td>32</td>\n",
        "      <td>0.028</td>\n",
@@ -622,7 +602,6 @@
        "      <td>0.095138</td>\n",
        "      <td>0.75</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.4</td>\n",
        "      <td>0.021</td>\n",
        "      <td>35</td>\n",
        "      <td>0.031</td>\n",
@@ -637,7 +616,6 @@
        "      <td>0.100182</td>\n",
        "      <td>0.80</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.024</td>\n",
        "      <td>34</td>\n",
        "      <td>0.027</td>\n",
@@ -652,7 +630,6 @@
        "      <td>0.120951</td>\n",
        "      <td>1.17</td>\n",
        "      <td>0.002</td>\n",
-       "      <td>0.4</td>\n",
        "      <td>0.022</td>\n",
        "      <td>32</td>\n",
        "      <td>0.028</td>\n",
@@ -667,7 +644,6 @@
        "      <td>0.139773</td>\n",
        "      <td>1.26</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.4</td>\n",
        "      <td>0.023</td>\n",
        "      <td>32</td>\n",
        "      <td>0.030</td>\n",
@@ -682,7 +658,6 @@
        "      <td>0.131063</td>\n",
        "      <td>1.04</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>0.024</td>\n",
        "      <td>34</td>\n",
        "      <td>0.027</td>\n",
@@ -697,7 +672,6 @@
        "      <td>0.092548</td>\n",
        "      <td>0.86</td>\n",
        "      <td>0.003</td>\n",
-       "      <td>0.4</td>\n",
        "      <td>0.020</td>\n",
        "      <td>34</td>\n",
        "      <td>0.025</td>\n",
@@ -708,32 +682,32 @@
        "</div>"
       ],
       "text/plain": [
-       "    자치구명  온실가스(1인당)    전력사용량  공공자전거_이용건수  급수사용량(1인당) 쓰레기배출량(1인당)  아황산가스 일산화탄소  \\\n",
-       "0    종로구   6.764409  1721240      726636    0.165591        1.49  0.003   0.5   \n",
-       "1     중구  10.138907  2305200      500302    0.206970        2.26  0.003   0.4   \n",
-       "2    용산구   3.827852  1514990      441899    0.115397        1.24  0.003   0.4   \n",
-       "3    성동구   4.072864  2235050      859819    0.107414        0.93  0.003   0.4   \n",
-       "4    광진구   2.736378  1616001     1042726    0.101943        0.71  0.003   0.5   \n",
-       "5   동대문구   2.676331  1457689      777649    0.100464        0.91  0.003   0.4   \n",
-       "6    중랑구   2.238323  1161372      628434    0.164648        0.74  0.003   0.4   \n",
-       "7    성북구   2.462184  1497475      529069    0.093245        0.85  0.003   0.5   \n",
-       "8    강북구   2.381970   933057      331973    0.090655        0.85  0.002   0.4   \n",
-       "9    도봉구   2.313772   894641      451406    0.089319        0.79  0.003   0.5   \n",
-       "10   노원구   2.413672  1540077     1300745    0.092882        0.72  0.003   0.5   \n",
-       "11   은평구   2.329958  1505392      543261    0.090146        0.79  0.003   0.5   \n",
-       "12  서대문구   2.788152  1297535      423730    0.101740        0.84  0.003   0.6   \n",
-       "13   마포구   3.968767  2265953     1077880    0.111707        1.44  0.003   0.4   \n",
-       "14   양천구   2.705264  1797687     1221203    0.090671        0.78  0.003   0.5   \n",
-       "15   강서구   2.888197  2752727     2417236    0.098108        3.55  0.003   0.5   \n",
-       "16   구로구   3.016286  1927165      857541    0.103314        0.89  0.003   0.4   \n",
-       "17   금천구   4.104716  1691616      373194    0.110012        1.10  0.003   0.4   \n",
-       "18  영등포구   4.204545  2782101     1737263    0.120993        1.10  0.003   0.5   \n",
-       "19   동작구   2.401346  1298388      446727    0.095138        0.75  0.003   0.4   \n",
-       "20   관악구   2.518978  1735924      535438    0.100182        0.80  0.003   0.5   \n",
-       "21   서초구   4.541270  3291898      640552    0.120951        1.17  0.002   0.4   \n",
-       "22   강남구   5.387819  4822166      653750    0.139773        1.26  0.003   0.4   \n",
-       "23   송파구   3.030249  3084332     2010221    0.131063        1.04  0.003   0.5   \n",
-       "24   강동구   2.444008  1659003      936551    0.092548        0.86  0.003   0.4   \n",
+       "    자치구명  온실가스(1인당)    전력사용량  공공자전거_이용건수  급수사용량(1인당) 쓰레기배출량(1인당)  아황산가스  \\\n",
+       "0    종로구   6.764409  1721240      726636    0.165591        1.49  0.003   \n",
+       "1     중구  10.138907  2305200      500302    0.206970        2.26  0.003   \n",
+       "2    용산구   3.827852  1514990      441899    0.115397        1.24  0.003   \n",
+       "3    성동구   4.072864  2235050      859819    0.107414        0.93  0.003   \n",
+       "4    광진구   2.736378  1616001     1042726    0.101943        0.71  0.003   \n",
+       "5   동대문구   2.676331  1457689      777649    0.100464        0.91  0.003   \n",
+       "6    중랑구   2.238323  1161372      628434    0.164648        0.74  0.003   \n",
+       "7    성북구   2.462184  1497475      529069    0.093245        0.85  0.003   \n",
+       "8    강북구   2.381970   933057      331973    0.090655        0.85  0.002   \n",
+       "9    도봉구   2.313772   894641      451406    0.089319        0.79  0.003   \n",
+       "10   노원구   2.413672  1540077     1300745    0.092882        0.72  0.003   \n",
+       "11   은평구   2.329958  1505392      543261    0.090146        0.79  0.003   \n",
+       "12  서대문구   2.788152  1297535      423730    0.101740        0.84  0.003   \n",
+       "13   마포구   3.968767  2265953     1077880    0.111707        1.44  0.003   \n",
+       "14   양천구   2.705264  1797687     1221203    0.090671        0.78  0.003   \n",
+       "15   강서구   2.888197  2752727     2417236    0.098108        3.55  0.003   \n",
+       "16   구로구   3.016286  1927165      857541    0.103314        0.89  0.003   \n",
+       "17   금천구   4.104716  1691616      373194    0.110012        1.10  0.003   \n",
+       "18  영등포구   4.204545  2782101     1737263    0.120993        1.10  0.003   \n",
+       "19   동작구   2.401346  1298388      446727    0.095138        0.75  0.003   \n",
+       "20   관악구   2.518978  1735924      535438    0.100182        0.80  0.003   \n",
+       "21   서초구   4.541270  3291898      640552    0.120951        1.17  0.002   \n",
+       "22   강남구   5.387819  4822166      653750    0.139773        1.26  0.003   \n",
+       "23   송파구   3.030249  3084332     2010221    0.131063        1.04  0.003   \n",
+       "24   강동구   2.444008  1659003      936551    0.092548        0.86  0.003   \n",
        "\n",
        "    이산화질소 미세먼지     오존  공원면적(1인당)  \n",
        "0   0.021   32  0.031   0.074353  \n",
@@ -763,7 +737,7 @@
        "24  0.020   34  0.025   0.007303  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
